--- a/04 - Responsividade e deploy/index.html
+++ b/04 - Responsividade e deploy/index.html
@@ -24,21 +24,21 @@
             Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://github.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
                     <img src="./assets/github.png">
                     GitHub
                 </a>
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/rafaballerini">
                     <img src="./assets/linkedin.png">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">
+                <a class="apresentacao__links__navegacao" href="https://github.com/guilhermeonrails">
                     <img src="./assets/twitch.png">
                     Twitch
                 </a>
             </div>
         </section>
-        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alura</p>
